<resources>
    <string name="app_name">Budget Planner App</string>
    <string name="action_search">Search</string>
    <string name="action_notifications">Notifications</string>
    <string name="action_transactions">Transactions</string>
    <string name="action_analytics">Analytics</string>
    <string name="action_rate_us">Rate Us</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string-array name="spinner_array">
        <item>Income</item>
        <item>Outcome</item>
    </string-array>
</resources>
